# src/app/Http/Controllers/WordController.php
@@ -29,8 +29,8 @@ class WordController extends Controller
         ], 201);
     }
 
-    public function edit(Request $request){
-        $word = Word::find($request->id);
+    public function edit(Request $request, $id){
+        $word = Word::find($id);
         if (!$word) {
             return response()->json(['error' => 'Word not found'], 404);
         }
